--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </tbody>
     </table>
     <div class="monthlyDiv">
-        <h3>Total Monthly Cost: $<span id='addMonthlyTotal'></span></h3>
+        <h3>Total Monthly Cost: <span id='addMonthlyTotal'></span></h3>
     </div>
     
     
