New remove input and button

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         </tbody>
     </table>
     <div class="monthlyDiv">
-        <h3>Total Monthly Cost: <span id='addMonthlyTotal'>$0</span></h3>
-       <label id= "removeEmployeeLabel">To Remove Employee: Enter in Employee Number</label>
+        <h3 id="totalMonthlyCostLabel">Total Monthly Cost: <span id='addMonthlyTotal'>$0</span></h3>
+       <label id= "removeEmployeeLabel">Please Enter in Employee ID to Remove Employee</label>
+       <input type="number" id="idNumberInTwo" placeholder="ID Number"/>
         <button id="removeEmployeeButton">Remove Employee</button>
     </div>
     
